...
    /**
     Title of the receiver inputField
     
     - returns: a string that is the title of the receiver
     */
    open override func title() -> String {
        return isStartDate ? "Start date" : "Expiry date"
    }
    
    
    /**
     Hint label text
     
...
