...
     */
    public func stringValue() -> String {
        switch self {
        case .unknown:
            return "Unknown"
        case .visa, .visaDebit, .visaElectron, .visaPurchasing:
            return "Visa"
        case .masterCard, .masterCardDebit:
            return "MasterCard"
        case .switch:
            return "Switch"
        case .solo:
            return "Solo"
...
    
    - Returns: a String for the title of a certain security code
    */
    public func securityCodeTitle() -> String {
        switch self {
        case .visa:
            return "CVV2"
        case .masterCard:
            return "CVC2"
        case .amex:
            return "CID"
        case .chinaUnionPay:
            return "CVN2"
        case .discover:
            return "CID"
        case .jcb:
            return "CAV2"
        case .unknown:
            return "CVV"
        default:
            return "CVV"
        }
    }
    
    
...
