...
    /**
     Title of the receiver cardNameField
     
     - returns: a string that is the title of the receiver
     */
    open override func title() -> String {
        return "Name this card (optional)"
    }
    
    
    /**
     Hint label text
     
...
